solar position calculation.

Changed rsplit, so specifying a space as the separator parses words
between whitespace.

Added ability of vwrays, pinterp, and pmblur2 to read encoded depth files.

Added -o RxCxR1xC1 facility to perform blocking in rcollate.

Made it so number of segments in genworm, genrev, and gensurf can be
given as expressions of previously defined variables, etc.

Added -D and -n option to gendaymtx to output sun description and skip
matrix output on request.  A -M option was also added to output solar
modifiers for rcontrib.  Support also added for leap days in WEA input.
Enhancements sponsored by Ladybug Tools.

Updated eplus_uvf to work with IDF version 9.x, checking version number.

Fix to glarendx issues with dgi calculation.

Made it so rmtxop and dctimestep undo any exposure applied to Radiance
pictures they may load.

Added robjutil utility to manipulate Wavefront .OBJ files.

Fixed a crash related to rtrace -om or -oM with mesh instances containing
materials.

Improved rtrace flushing function to handle any value for -x without
deadlock on controlling process.

Eliminated unnecessary start-up procedures for rtrace when only ray-casting
is needed (i.e., no tracing or value output).

Improved isotropic sampling method in bsdf2ttree using "zipper" approach
applied in genBSDF.

Added limit to memory used by high-resolution tensor tree BSDFs for
cumulative cache during MC sampling (rendering).  Limit set to 250MBytes
per BSDF for standard architectures.

Added -n and -s options to bsdf2ttree to provide some user control
over super-sampling.

Improved surface normal codec used by ambient file to store orthonormal
directions exactly.

Improved peak extraction method, which was undervaluing transmission
in many cases.

New version of evalglare from Jan Wienold.

Added -u option to gendaymtx to elide data columns (time steps) when
the sun is not visible above the horizon.

=========================
Version 5.4