@@ -2384,3 +2384,6 @@ the sun is not visible above the horizon.
 
 =========================
 Version 5.4
+
+Added rcollate -c option to force operation to continue even if it
+seems unnecessary.  Made tool more robust.
